# cmake-host

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  build-one.sh  build-template.sh  build.sh  tasks.json
.github/workflows/: build-host.yaml
src/: main.cpp
